objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_lists__c</fullName>
        <label>Attendee lists</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Session</label>
        <referenceTo>Training_Session__c</referenceTo>
        <relationshipLabel>vs</relationshipLabel>
        <relationshipName>vs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training</label>
        <referenceTo>Training_Session__c</referenceTo>
        <relationshipLabel>Attendees (Training)</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <recordTypes>
        <fullName>Attendee_Record</fullName>
        <active>true</active>
        <label>Attendee Record</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Email</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( REGEX( Email__c ,&quot;[a-zA-Z0-9._%-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4}&quot; ))</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>This email doesn&apos;t look right</errorMessage>
    </validationRules>
</CustomObject>